--- a/components/hero/hero.css
+++ b/components/hero/hero.css
@@ -41,7 +41,7 @@
     border-radius: 10px;
     font-weight: bold;
     color: #fff;
-    font-size: 18px;
+    /* font-size: 18px; */
     font-family: inherit;
     z-index: 0;
     overflow: hidden;
